src/objects/Journal_Voucher_meta__mdt.object
<CustomObject>
    <fields>
        <fullName>Batch_Time__c</fullName>
        <description>This captures the hour at which the particular JV needs to be created</description>
        <label>Batch Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doc_Number_Prefix__c</fullName>
        <label>Doc Number Prefix</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JV_Document_Title__c</fullName>
        <label>JV Document Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JV_Explanation_of_Entry__c</fullName>
        <label>JV Explanation of Entry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Journal Voucher meta</label>
    <pluralLabel>Journal Voucher meta</pluralLabel>
</CustomObject>